Fix permissions check
Fixes the permissions check to only check if the permission is true, not
if it is true AND overridden/set. Also fixes a few errors in my IDE.